text alignment corrected

--- a/css/questionPage.css
+++ b/css/questionPage.css
@@ -29,7 +29,9 @@ main{
     height: 160px;
     padding: 20px;
     text-align: center;
-    align-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 20px;
     box-shadow: 0px 7px 20px #d3d3d3;
 }
